crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_single_element_tuple_ambiguity.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { (single_element,); }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    Identifier(
                        "single_element",
                    ),
                ),
            ],
        },
    ),
]
