crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_trailing_comma_function_call.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { foo(a, b, c,); }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "foo",
                                                14..17,
                                            ),
                                        ),
                                        14..17,
                                    ),
                                    args: [
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "a",
                                                    18..19,
                                                ),
                                            ),
                                            18..19,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "b",
                                                    21..22,
                                                ),
                                            ),
                                            21..22,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "c",
                                                    24..25,
                                                ),
                                            ),
                                            24..25,
                                        ),
                                    ],
                                },
                                14..17,
                            ),
                        ),
                        14..28,
                    ),
                ],
            },
            0..30,
        ),
    ),
]
