crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_trailing_comma_struct_literal.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { Point { x: 1, y: 2, }; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                StructLiteral {
                                    name: Spanned(
                                        "Point",
                                        14..19,
                                    ),
                                    fields: [
                                        (
                                            Spanned(
                                                "x",
                                                22..23,
                                            ),
                                            Spanned(
                                                Literal(
                                                    1,
                                                ),
                                                25..26,
                                            ),
                                        ),
                                        (
                                            Spanned(
                                                "y",
                                                28..29,
                                            ),
                                            Spanned(
                                                Literal(
                                                    2,
                                                ),
                                                31..32,
                                            ),
                                        ),
                                    ],
                                },
                                14..35,
                            ),
                        ),
                        14..36,
                    ),
                ],
            },
            0..38,
        ),
    ),
]
