crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__function_function_multiple_params.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func complex(a: felt, b: felt*, c: (felt, felt)) { }
result: [
    Function(
        FunctionDef {
            name: "complex",
            params: [
                Parameter {
                    name: "a",
                    type_expr: Named(
                        "felt",
                    ),
                },
                Parameter {
                    name: "b",
                    type_expr: Pointer(
                        Named(
                            "felt",
                        ),
                    ),
                },
                Parameter {
                    name: "c",
                    type_expr: Tuple(
                        [
                            Named(
                                "felt",
                            ),
                            Named(
                                "felt",
                            ),
                        ],
                    ),
                },
            ],
            return_type: None,
            body: [],
        },
    ),
]
