crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__function_function_no_return.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func print_hello() { let msg = hello; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "print_hello",
                    5..16,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            name: Spanned(
                                "msg",
                                25..28,
                            ),
                            statement_type: None,
                            value: Spanned(
                                Identifier(
                                    Spanned(
                                        "hello",
                                        31..36,
                                    ),
                                ),
                                31..36,
                            ),
                        },
                        21..37,
                    ),
                ],
            },
            0..39,
        ),
    ),
]
