crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__function_trailing_comma_function_params.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test(a: felt, b: felt,) { }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "a",
                            10..11,
                        ),
                        type_expr: Named(
                            "felt",
                        ),
                    },
                    Parameter {
                        name: Spanned(
                            "b",
                            19..20,
                        ),
                        type_expr: Named(
                            "felt",
                        ),
                    },
                ],
                return_type: None,
                body: [],
            },
            0..32,
        ),
    ),
]
