crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__import_import_with_alias.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: from std.math import add as plus
result: [
    Import(
        ImportStmt {
            path: [
                "std",
                "math",
            ],
            item: "add",
            alias: Some(
                "plus",
            ),
        },
    ),
]
